--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
+
+# Ignore SaaS deploy config (contains server IPs)
+/config/deploy.saas.yml
+
+# Ignore SaaS secrets (but keep the template)
+/.kamal/secrets.saas
